# gold-analysis

./: .gitignore  README.md  pyproject.toml  驗收報告_完整版.md
agents/: __init__.py  data_collector.py
backend/: .env.example  __init__.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  coordinator.py  decision_recommender.py  fundamental_analyzer.py  risk_assessment.py  technical_analysis.py
backend/app/analysis/: __init__.py  performance.py
backend/app/api/: __init__.py  routes.py
backend/app/cleaners/: __init__.py  config.py  outlier_detector.py  price_cleaner.py
backend/tests/: conftest.py  test_agent_collaboration.py  test_cleaners.py  test_data_pipeline.py  test_data_sources.py  test_db_models.py  test_postgres.py  test_system_integration.py  test_technical_analysis.py  test_validators.py
backend_mvp/: server.py
data_adapters/: __init__.py  bot_adapter.py  yahoo_finance_adapter.py
db/: database.py  schema.sql
docs/: AGENTS.md  DATABASE.md  ENVIRONMENT.md  VERIFICATION-REPORT-2026-04-11.md
docs/_archive/: 驗收報告.md  驗收報告_完整版.md
docs/reports/: README.md  TEMPLATE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/docs/: FRONTEND.md
frontend/src/: App.css  App.tsx  index.css  main.tsx
schedulers/: __init__.py  price_scheduler.py
scripts/: gold_monitor.py  start_backend.sh  start_backend_mvp.sh  start_frontend.sh
tests/: __init__.py  test_data_collector.py  test_decision_recommender.py  test_fundamental_analyzer.py
(+118 files in other folders)
